--- a/home.html
+++ b/home.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 <title>My First Homepage</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-54516992-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-54516992-1');
+</script>
 </head>
 <body>Hello Github Page</body>
 </html>
