--- a/basic.html
+++ b/basic.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>Google Analytics 基本範例</title>
 <!-- 以下是 GA 追蹤碼的基本安裝 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=追蹤編號"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-104255739-1"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments)};
 gtag("js", new Date());
 
-gtag("config", "追蹤編號");
+gtag("config", "UA-104255739-1");
 </script>
 </head>
 <body>
