--- a/product-page.html
+++ b/product-page.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>Product Page - GA 電子商務範例</title>
 <!-- 以下是 GA 追蹤碼的基本安裝 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=追蹤編號"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-104255739-1"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments)};
 gtag("js", new Date());
 
-gtag("config", "追蹤編號");
+gtag("config", "UA-104255739-1");
 // 以下和電子商務有關的追蹤程式
 // 追蹤：【兔兔草】產品詳細資訊的瀏覽次數
 gtag("event", "view_item", {
